--- a/app/globals.css
+++ b/app/globals.css
@@ -91,6 +91,75 @@ body {
   }
 }
 
+@layer utilities {
+  .flex-center {
+    @apply flex items-center justify-center;
+  }
+  .section-heading {
+    @apply text-[#86868b] lg:text-6xl md:text-5xl text-3xl lg:mb-0 mb-5 font-medium opacity-0 translate-y-20 bg-gradient-to-l from-orange-950 via-orange-300 to-orange-600 bg-transparent  inline-block text-transparent bg-clip-text;
+  }
+
+  .feature-text {
+    @apply text-[#86868b] max-w-md text-lg md:text-xl font-semibold opacity-0 translate-y-[100px];
+  }
+
+  .feature-text-container {
+    @apply w-full flex-center flex-col md:flex-row mt-10 md:mt-16 gap-5;
+  }
+
+  .feature-video {
+    @apply w-full h-full object-cover object-center scale-150 opacity-0;
+  }
+
+  .feature-video-container {
+    @apply w-full flex flex-col md:flex-row gap-0.5 md:items-center;
+  }
+
+  .link {
+    @apply text-blue-600 hover:underline cursor-pointer flex items-center text-xl opacity-0 translate-y-20;
+  }
+
+  .control-btn {
+    @apply ml-4 p-4 rounded-full bg-gray-600/20 backdrop-blur-sm flex-center;
+  }
+
+  .hero-title {
+    @apply text-center text-4xl font-bold bg-gradient-to-l from-orange-950 via-orange-300 to-orange-600 bg-transparent  inline-block text-transparent bg-clip-text   max-md:mb-10;
+  }
+
+  .hiw-title {
+    @apply text-xl md:text-4xl font-semibold text-center;
+  }
+
+  .hiw-subtitle {
+    @apply text-[#86868b] font-semibold text-xl md:text-2xl py-10 text-center;
+  }
+
+  .hiw-video {
+    @apply absolute w-[95%] h-[90%] rounded-[56px] overflow-hidden;
+  }
+
+  .hiw-text-container {
+    @apply flex md:flex-row flex-col justify-between items-start gap-24;
+  }
+
+  .hiw-text {
+    @apply text-[#86868b] text-xl font-normal md:font-semibold;
+  }
+
+  .hiw-bigtext {
+    @apply text-white text-3xl md:text-5xl font-normal md:font-semibold my-2;
+  }
+
+  .video-carousel_container {
+    @apply relative sm:w-[70vw] w-[88vw] md:h-[70vh] sm:h-[50vh] h-[35vh];
+  }
+
+  .g_fadeIn {
+    @apply opacity-0 translate-y-[100px];
+  }
+}
+
 .magicpattern {
   /* width: 100%;
   height: 100%;
