--- a/app/globals.css
+++ b/app/globals.css
@@ -18,9 +18,9 @@
   --background: #ffffff;
   --foreground: #171717;
 }
-/* * {
-  border: 1px solid red;
-} */
+* {
+  /* border: 1px solid red; */
+}
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
